--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@derivation-tech/web3-core": "^1.0.38",
     "@nomicfoundation/hardhat-foundry": "^1.1.2",
+    "@openzeppelin/contracts": "^5.0.2",
+    "@openzeppelin/contracts-upgradeable": "^5.0.2",
     "hardhat": "^2.22.13"
   },
   "devDependencies": {
