--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,11 @@
 [profile.default]
+solc = "0.8.27"
 src = 'contracts'
 out = 'out'
 libs = ['node_modules', 'lib']
 test = 'test'
-cache_path  = 'cache_forge'
+cache_path = 'cache_forge'
+
+[etherscan]
+base = { key = "TJY2CHMTQMI1HF4WVQJES2CDVF4K733CUK", url = "https://basescan.org/" }
+base-sepolia = { key = "TJY2CHMTQMI1HF4WVQJES2CDVF4K733CUK", url = "https://sepolia.basescan.org/", chain = "84532" }
