--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@nomicfoundation/hardhat-foundry": "^1.1.2",
     "@openzeppelin/contracts": "^5.0.2",
     "@openzeppelin/contracts-upgradeable": "^5.0.2",
+    "eslint": "^9.13.0",
     "hardhat": "^2.22.13"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.0",
     "@nomicfoundation/hardhat-ignition": "^0.15.0",
@@ -26,10 +28,12 @@
     "chai": "^4.2.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.4.0",
+    "globals": "^15.11.0",
     "hardhat-gas-reporter": "^1.0.8",
     "solidity-coverage": "^0.8.0",
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.0",
-    "typescript": ">=4.5.0"
+    "typescript": ">=4.5.0",
+    "typescript-eslint": "^8.12.2"
   }
 }
