--- a/foundry.toml
+++ b/foundry.toml
@@ -5,4 +5,7 @@ out = 'out'
 libs = ['node_modules', 'lib']
 test = 'test'
 cache_path = 'cache_forge'
-evm_version = 'shanghai'
+evm_version = 'cancun'
+
+[etherscan]
+sepolia = { key = "${ETHERSCAN_API}" }
